##Text encoding: utf-8

2013-04-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add more properties.
	* libs/gcp/reaction-arrow.h: ditto.

2013-04-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add a PositionChildren() method.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: initialize spin buttons.
	* libs/gcp/reaction-prop-dlg.h: ditto.
	* libs/gcp/reaction-prop.cc: don't save step, line or rank when less than 1.

2013-04-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/functions.cc: add monoisotopicmass function.
	* gnumeric/plugin.xml.in.in: ditto.
	* ui/calc/gchemcalc.ui: make the masses selectable.

2013-03-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: fix crash when loading some molecules.
	* libs/gcp/reaction-arrow.cc: start work on multi attachments support.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: ditto.
	* ui/paint/arrow-object.ui: ditto.
	* ui/paint/reaction-arrow-prop.ui: ditto.

2013-03-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: don't crash when deleting a cyclic bond.
	* libs/gcp/reaction-arrow.cc: start work for supporting several attachments
	to the same arrow.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.

2013-03-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: enhance the choice of a stereobond from known parity.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcu/chain.cc: new GetFirstAtom().
	* libs/gcu/chain.h: ditto.
	* libs/gcu/cycle.cc: Evaluates inter-cycle bridge length.
	* libs/gcu/cycle.h: ditto.

2013-02-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mesomery.cc: remove extra white space.
	* libs/gcp/molecule.cc: checl molecule consistency while loading, avoids
	a stack overflow.

2013-02-26  Jean Bréfort  <jean.brefort@normalesup.org>